# Super-Codex-AI

./: .coverage  .dockerignore  .env  .env.example  .gitignore  ADVANCED_HEALTH_CHECKS_SUMMARY.md  AUTHORIZATION_GUIDE.md  AXIOM_ENGINE_COMPLETE.md  AXIOM_FLAME_API_README.md  AXIOM_FLAME_GO_LIVE_CEREMONIAL_PROTOCOL.md  BENEDICTION.md  CADDY_DEPLOYMENT.md  CANTICLE.md  CEREMONIAL_CLOSING_HYMN.md  CEREMONIAL_GOVERNANCE_PROTOCOLS_DEPLOYMENT.md  CEREMONIAL_INTERFACE_COMPLETE.md  CODEX_BRAIN.md  CODEX_BRAIN_MAP.md  CODEX_CEREMONIES.md  CODEX_CONSTELLATION_MAP.md  CODEX_CONSTELLATION_MAP_EIGHTH_EXPANSION.md  CODEX_CONSTELLATION_MAP_EXPANDED.md  CODEX_CONSTELLATION_MAP_EXTENDED.md  CODEX_CONSTELLATION_MAP_FIFTH_EXPANSION.md  CODEX_CONSTELLATION_MAP_FOURTH_EXPANSION.md  CODEX_CONSTELLATION_MAP_SEVENTH_EXPANSION.md  CODEX_CONSTELLATION_MAP_SIXTH_EXPANSION.md  CODEX_CONSTELLATION_MAP_THIRD_EXPANSION.md  CODEX_DISPATCHES.md  CODEX_SOVEREIGN_SUITE_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTOR_AVATARS.md  CURRENT_ISSUES_STATUS.md  CUSTODIANS_ABSOLUTE_COMPLETION.md  CUSTODIANS_CLOSING_BENEDICTION_OF_RADIANCE.md  CUSTODIANS_ETERNAL_EPILOGUE_OF_RADIANCE.md  CUSTODIANS_OPENING_OF_TRANSMISSION.md  CUSTODIANS_UNIVERSAL_TRANSMISSION_HYMN.md  CUSTODIAN_HEIRS_CONCORD_HYMN.md  CYCLE_COMPLETION.md  (+421 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
app/: __init__.py  auth.py  auth_routes.py  authz.py  config.py  db.py  deps.py  gateway.py  health.py  logging_setup.py  main.py  models.py  routes_workflow.py  workflow.py  ws.py
axiom-flame/: DEPLOYMENT.md  Dockerfile  MANIFEST.in  (+4 more)
(+831 files in other folders)
